-fixed LavLinks z-index during meditation timer on mobile -changed src of audio to="" in MeditateSection when isPlaying===false

--- a/src/components/NavLinks/NavLinks.module.css
+++ b/src/components/NavLinks/NavLinks.module.css
@@ -34,5 +34,6 @@
         height: 100vh;
         max-height: 500px;
         margin: 0 auto;
+        z-index: 1;
     }
 }
